# just-talk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: download-model.sh  package-macos.sh
src/: app.rs  audio.rs  config.rs  error.rs  hotkey.rs  lib.rs  main.rs  notification.rs  overlay.rs  tray.rs
src/output/: clipboard.rs  focus.rs  inject.rs  mod.rs
src/refine/: claude.rs  mod.rs  ollama.rs  openai.rs  passthrough.rs
src/transcribe/: local.rs  mod.rs  remote.rs
tests/: integration_app.rs  integration_output.rs  integration_refine.rs  integration_transcribe.rs
