[package]
name = "just-talk"
version = "0.1.0"
edition = "2021"
description = "Cross-platform voice IME — speak to type, powered by Whisper + AI"
license = "MIT"
repository = "https://github.com/your-username/just-talk"
homepage = "https://github.com/your-username/just-talk"
keywords = ["voice", "ime", "whisper", "transcription", "accessibility"]
categories = ["command-line-utilities", "accessibility"]

# cargo-bundle (macOS .app)
[package.metadata.bundle]
name = "just-talk"
identifier = "com.just-talk.app"
icon = ["build/macos/AppIcon.icns"]
version = "0.1.0"
copyright = "Copyright © 2024 just-talk contributors"
category = "public.app-category.utilities"
short_description = "Voice IME — speak to type"
long_description = "Press a hotkey to record, Whisper transcribes, AI refines, text is injected."
osx_minimum_system_version = "12.0"
osx_url_schemes = []
osx_frameworks = []

# cargo-deb (Debian/Ubuntu .deb)
[package.metadata.deb]
maintainer = "just-talk contributors"
copyright = "Copyright © 2024 just-talk contributors, MIT License"
license-file = ["LICENSE", "4"]
extended-description = "just-talk is a cross-platform voice IME. Press a global hotkey, speak, and the transcribed (and optionally AI-refined) text is injected into any focused text field."
depends = "$auto, libasound2, libxdo3, libxtst6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/just-talk", "usr/bin/", "755"],
    ["build/linux/just-talk.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/just-talk/README", "644"],
]

# -----------------------------------------------------------------------------
# Features
# default: no local-whisper (needs cmake) and no tray, enabled per-phase
# -----------------------------------------------------------------------------
[features]
default = []
local-whisper = ["dep:whisper-rs"]   # requires cmake; enable after Phase 5
tray          = []                   # reserved; tray-icon is always on macOS
gpu           = ["whisper-rs/cuda"]  # CUDA acceleration (Linux/Windows)

# -----------------------------------------------------------------------------
# Core dependencies
# -----------------------------------------------------------------------------
[dependencies]
# Async
tokio        = { version = "1",    features = ["full"] }
async-trait  = "0.1"

# Global hotkey
rdev         = "0.5"

# Audio capture & processing
cpal         = "0.15"
rubato       = "0.14"
hound        = "3.5"

# Local Whisper (optional, needs cmake)
whisper-rs   = { version = "0.11", optional = true }

# HTTP client for remote APIs
reqwest      = { version = "0.12", features = ["json", "multipart"] }

# Output
arboard      = "3"
enigo        = "0.2"

# Config & CLI
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
clap         = { version = "4",    features = ["derive"] }

# Error handling
thiserror    = "1"
anyhow       = "1"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tracing-appender    = "0.2"

# Utilities
dirs         = "5"
notify       = "6"        # filesystem watcher for config hot-reload
notify-rust  = "4"        # OS notification popups

# Overlay UI
egui         = "0.29"
eframe       = "0.29"


# -----------------------------------------------------------------------------
# Platform-specific
# -----------------------------------------------------------------------------
[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.14"

# Focus detection (Phase 7 — stubs currently active)
# accessibility = "0.1"

# [target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.58", features = ["Win32_UI_Accessibility"] }

# [target.'cfg(target_os = "linux")'.dependencies]
# atspi = "0.3"

# -----------------------------------------------------------------------------
# Dev & test
# -----------------------------------------------------------------------------
[dev-dependencies]
tokio    = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
